Release Trio 0.5.0-beta: Spigot 1.8.8 floor through Minecraft 26.2
This is a breaking floor release. Trio now compiles against Spigot API
1.8.8 and emits Java 8 bytecode so one jar loads on Spigot, Paper,
Purpur, and Folia from Minecraft 1.8.8 through 26.2 — the same single-jar
strategy Fliver Zen already uses. Runtime adapters still pick Folia
schedulers, Brigadier registration, and optional Adventure paths when
present.

Build floor
- Switch compile dependency from paper-api 1.20.1 to
  spigot-api 1.8.8-R0.1-SNAPSHOT (bungeecord-chat excluded).
- Target Java 8 (source/target 1.8); drop maven.compiler.release and the
  paper-api verify-latest profile.
- Bump version to 0.5.0-beta; align hello-trio with the same floor.

Java 8 language cleanup
- Replace pattern-matching instanceof, String.isBlank, Runtime.version,
  and Map/List.copyOf with Java 8-safe equivalents across Platform,
  ServerVersion, Menus, RegionScheduler, and BrigadierCommands.

Messages without Adventure at compile time
- Make ChatColor / & codes the primary lang path (%placeholder%).
- Remove compile-time Adventure/MiniMessage imports; add AdventureBridge
  (reflection only) for optional MiniMessage parse and Component send on
  Paper when those classes exist.
- Drop Lang.component(); Messages always falls back to sendMessage(String).
- Convert hello-trio en_US.yml samples to & color codes.

HTTP and menus
- Rewrite Http on HttpURLConnection + worker threads with RegionScheduler
  sync callbacks (API shape preserved).
- Menus: String-only chest titles and chestMini(langKey); remove
  Component overloads from the public compile surface.

Docs and CI
- Document Spigot/Paper/Purpur/Folia × 1.8.8–26.2, Java 8 bytecode, and
  server JVM recommendations.
- CI builds with JDK 17 while asserting class major version 52 (Java 8).

Co-authored-by: Cursor <cursoragent@cursor.com>