@@ -1,28 +1,43 @@
 package net.fliver.trio.http;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.ByteArrayOutputStream;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadFactory;
 import java.util.function.Consumer;
 import net.fliver.trio.schedule.RegionScheduler;
 import org.bukkit.plugin.java.JavaPlugin;
 
 public final class Http {
-  private static final String USER_AGENT = "Trio/0.4.0-beta";
+  private static final String USER_AGENT = "Trio/0.5.0-beta";
+  private static final int DEFAULT_MAX_BYTES = 4 * 1024 * 1024;
+
+  private static final ExecutorService WORKERS =
+      Executors.newCachedThreadPool(
+          new ThreadFactory() {
+            @Override
+            public Thread newThread(Runnable r) {
+              Thread t = new Thread(r, "trio-http");
+              t.setDaemon(true);
+              return t;
+            }
+          });
 
   private final JavaPlugin plugin;
-  private final HttpClient client;
 
   private Http(JavaPlugin plugin) {
     this.plugin = plugin;
-    this.client = HttpClient.newBuilder().connectTimeout(Duration.ofSeconds(10)).build();
   }
 
   public static Http of(JavaPlugin plugin) {
@@ -33,50 +48,108 @@ public final class Http {
     request(Request.get(url), onMain, onError);
   }
 
-  public void request(Request req, Consumer<Response> onMain, Consumer<Throwable> onError) {
+  public void request(
+      final Request req, final Consumer<Response> onMain, final Consumer<Throwable> onError) {
     if (req == null) {
       throw new IllegalArgumentException("req");
     }
-    HttpRequest.Builder builder =
-        HttpRequest.newBuilder(URI.create(req.url()))
-            .timeout(req.timeout())
-            .header("User-Agent", USER_AGENT);
+    WORKERS.execute(
+        new Runnable() {
+          @Override
+          public void run() {
+            try {
+              final Response response = execute(req);
+              runMain(
+                  new Runnable() {
+                    @Override
+                    public void run() {
+                      if (onMain != null) {
+                        onMain.accept(response);
+                      }
+                    }
+                  });
+            } catch (final Throwable error) {
+              runMain(
+                  new Runnable() {
+                    @Override
+                    public void run() {
+                      if (onError != null) {
+                        onError.accept(error);
+                      }
+                    }
+                  });
+            }
+          }
+        });
+  }
+
+  private Response execute(Request req) throws Exception {
+    HttpURLConnection connection = (HttpURLConnection) new URL(req.url()).openConnection();
+    connection.setRequestMethod(req.method().toUpperCase());
+    connection.setConnectTimeout((int) Math.min(Integer.MAX_VALUE, req.timeout().toMillis()));
+    connection.setReadTimeout((int) Math.min(Integer.MAX_VALUE, req.timeout().toMillis()));
+    connection.setRequestProperty("User-Agent", USER_AGENT);
+    connection.setInstanceFollowRedirects(true);
 
     for (Map.Entry<String, String> header : req.headers().entrySet()) {
-      builder.header(header.getKey(), header.getValue());
+      connection.setRequestProperty(header.getKey(), header.getValue());
     }
 
     String method = req.method().toUpperCase();
     String body = req.body();
-    if (body == null || body.isEmpty() || method.equals("GET") || method.equals("DELETE")) {
-      builder.method(method, HttpRequest.BodyPublishers.noBody());
-    } else {
-      builder.method(method, HttpRequest.BodyPublishers.ofString(body));
+    boolean hasBody =
+        body != null && !body.isEmpty() && !"GET".equals(method) && !"DELETE".equals(method);
+    connection.setDoOutput(hasBody);
+    if (hasBody) {
+      byte[] bytes = body.getBytes(StandardCharsets.UTF_8);
+      connection.setFixedLengthStreamingMode(bytes.length);
+      OutputStream out = connection.getOutputStream();
+      try {
+        out.write(bytes);
+      } finally {
+        out.close();
+      }
     }
 
-    client
-        .sendAsync(builder.build(), HttpResponse.BodyHandlers.ofString())
-        .whenComplete(
-            (httpResponse, error) -> {
-              if (error != null) {
-                runMain(() -> {
-                  if (onError != null) {
-                    onError.accept(error);
-                  }
-                });
-                return;
-              }
-              Response response = Response.from(httpResponse);
-              runMain(() -> {
-                if (onMain != null) {
-                  onMain.accept(response);
-                }
-              });
-            });
+    int status = connection.getResponseCode();
+    InputStream stream =
+        status >= 400 ? connection.getErrorStream() : connection.getInputStream();
+    String responseBody = stream == null ? "" : readAll(stream, DEFAULT_MAX_BYTES);
+    Map<String, List<String>> headers = connection.getHeaderFields();
+    Map<String, List<String>> copy = new HashMap<String, List<String>>();
+    if (headers != null) {
+      for (Map.Entry<String, List<String>> entry : headers.entrySet()) {
+        if (entry.getKey() == null) {
+          continue;
+        }
+        copy.put(entry.getKey(), Collections.unmodifiableList(entry.getValue()));
+      }
+    }
+    connection.disconnect();
+    return new Response(status, responseBody, Collections.unmodifiableMap(copy));
   }
 
   private void runMain(Runnable task) {
     RegionScheduler.runSync(plugin, task);
+  }
+
+  private static String readAll(InputStream stream, int maxBytes) throws Exception {
+    ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+    byte[] chunk = new byte[4096];
+    int read;
+    int total = 0;
+    try {
+      while ((read = stream.read(chunk)) != -1) {
+        total += read;
+        if (total > maxBytes) {
+          throw new Exception("response too large (limit " + maxBytes + " bytes)");
+        }
+        buffer.write(chunk, 0, read);
+      }
+    } finally {
+      stream.close();
+    }
+    return new String(buffer.toByteArray(), StandardCharsets.UTF_8);
   }
 
   public static final class Request {
@@ -126,7 +199,7 @@ public final class Http {
     public static final class Builder {
       private final String url;
       private String method = "GET";
-      private final Map<String, String> headers = new HashMap<>();
+      private final Map<String, String> headers = new HashMap<String, String>();
       private String body;
       private Duration timeout = Duration.ofSeconds(15);
 
@@ -155,7 +228,8 @@ public final class Http {
       }
 
       public Request build() {
-        return new Request(url, method, Map.copyOf(headers), body, timeout);
+        return new Request(
+            url, method, Collections.unmodifiableMap(new HashMap<String, String>(headers)), body, timeout);
       }
     }
   }
@@ -169,12 +243,6 @@ public final class Http {
       this.status = status;
       this.body = body;
       this.headers = headers;
-    }
-
-    private static Response from(HttpResponse<String> response) {
-      Map<String, List<String>> map = new HashMap<>();
-      response.headers().map().forEach((k, v) -> map.put(k, List.copyOf(v)));
-      return new Response(response.statusCode(), response.body() == null ? "" : response.body(), Collections.unmodifiableMap(map));
     }
 
     public int status() {
